@@ -1,0 +1,5 @@
+#customized output for fusionforge
+changeset = "{file_mods}{file_adds}{file_dels}"
+file_add  = "{author}\nA {file_add}\n"
+file_mod  = "{author}\nM {file_mod}\n"
+file_del  = "{author}\nD {file_del}\n"
