@@ -1,11 +1,16 @@
 [scmhg]
 
-; Current scmhg is production ready.
+; Current scmhg is valid.
 ; plugin_status is a string.
 ; valid means : production ready.
 ; Any other strings means it's under work or broken and plugin  
 ; is available in installation_environment = development only.
 plugin_status = valid
 
+use_ssl = no
+use_ssh = yes
+use_dav = yes
+anonhg_login = guest
+anonhg_password = guest
 default_server = "$core/web_host"
 repos_path = "$core/chroot/scmrepos/hg"
